--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="welcome">Are you ready to play the game?</h1>
+        <button id="start">Start</button>
+        <h2 id="countdown"></h2>
+        <p id="main"></p>
+      </div>
+    
+    <div class="quiz-container">
+        <div id="quiz"></div>
+    </div>  
+      <button id="previous">Previous Question</button>
+      <button id="next">Next Question</button>
+      <button id="submit">Submit Quiz</button>
+      <div id="results"></div>
+   
     <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
