redefined the code with switch statements

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <button id="start">Start</button>
         <h2 id="countdown"></h2>
         <p id="main"></p>
+        <form>        
+            <input type="radio" id="True" name="AnswerOptions" value="True">
+            <label for="HTML">True</label><br>
+            <input type="radio" id="False" name="AnswerOptions" value="False">
+            <label for="HTML">False</label><br>
+        </form>
+
       </div>
     
-    <div class="quiz-container">
-        <div id="quiz"></div>
-    </div>  
-      <button id="previous">Previous Question</button>
-      <button id="next">Next Question</button>
-      <button id="submit">Submit Quiz</button>
-      <div id="results"></div>
-   
+     
     <script src="./assets/js/script.js"></script>
 
 </body>
