--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <h2 id="countdown"></h2>
         <p id="main"></p>
         <form>        
-            <input type="radio" id="True" name="AnswerOptions" value="True">
-            <label for="HTML">True</label><br>
-            <input type="radio" id="False" name="AnswerOptions" value="False">
-            <label for="HTML">False</label><br>
-        </form>
+            True:<input type="radio" id="True">
+<!--             <label for="Answers">True</label><br> -->
+            False:<input type="radio" id="False">
+        </form>
+        <button id="submit">Submit</button>
 
       </div>
     
