correct issues with timing and add in additional questions

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div class="scores">
-            <a id="highscores-link">View high scores</a>
+            <a id="highscores-link">View High Scores</a>
         </div>
         <div id="timer" class="timer">
-            Time: 60
+            Time Left: 60 Seconds Remaining
         </div>
     </header>
 
@@ -67,7 +67,7 @@
     </section>
 
     <script src="./assets/js/script.js"></script>
-    <!-- <script src="./assets/js/logic.js"></script> -->
+    
 </body>
 
 </html>
