ready for deployment

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <section id="start-container" class="start-quiz">
         <h1>Welcome to JavaScript Quiz Challenge</h1>
         <p>
-            You have 60 seconds to try to get the highest score by answering five
-            series of JavaScript questions. Incorrect answers will penalize your
-            time by ten seconds. Your total score will be your time after you
+            You have 60 seconds to try to get the highest score by answering seven
+            JavaScript related questions. Incorrect answers will penalize your
+            time by five seconds. Your total score will be your time after you
             answer the last question. Click start when you are ready.
         </p>
         <div class="controls">
